<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Введите имя</string>
    <string name="entrance">Вход</string>
    <string name="password">Введите Пароль</string>
    <string name="second_name">Введите фамилию</string>
    <string name="go">Войти</string>
    <string name="number">Введите номер телефона</string>
</resources>