<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.fragments.RegisterFragment">


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/entrance"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_et_name"
        style="@style/TextInputLayout"
        android:layout_marginTop="160dp"
        android:hint="@string/name"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconDrawable="@drawable/trailing_icon"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:endIconMode="clear_text"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_et_second_name"
        style="@style/TextInputLayout"
        android:hint="@string/second_name"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_et_name"
        app:endIconDrawable="@drawable/trailing_icon"
        app:endIconMode="clear_text"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_second_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_et_number"
        style="@style/TextInputLayout"
        android:hint="@string/number"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_et_second_name"
        android:autofillHints="phone"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/input_et_number"
        android:layout_marginTop="20dp"
        android:text="@string/go"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="visible"
        android:backgroundTint="@color/bottom_menu_color"
        app:cornerRadius="10dp"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Нажимая кнопку “Войти”, Вы принимаете"
        app:layout_constraintBottom_toTopOf="@id/tv_programm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="4dp"
        android:textSize="10sp"
        android:textColor="@color/gray"
        />

    <TextView
        android:id="@+id/tv_programm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="условия программы лояльности"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        android:textSize="10sp"
        android:textColor="@color/gray"
        />


</androidx.constraintlayout.widget.ConstraintLayout>